<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".Recharge">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/introPhoto"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/background_color"
        android:orientation="vertical">


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="16dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/mainActivity_ad_unit_id">

        </com.google.android.gms.ads.AdView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/introPhoto"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:background="@color/background_color"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/pinEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="100dp"
                android:hint="@string/enter_your_voucher_pin"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/rechargeBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pinEt"
                android:background="@color/colorPrimaryDark"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/recharge" />


        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>





