<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <!--



    <android.support.v7.widget.CardView
        android:id="@+id/introPhoto"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        android:background="@color/background_color"
        android:orientation="horizontal">





        <ImageView
            android:id="@+id/introImage"
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:contentDescription="T Pesa logo"
            android:src="@drawable/ttclpesa_logo" />




    </android.support.v7.widget.CardView>

    -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/generalCheckBalanceCardView"
            android:layout_width="0dp"
            app:cardCornerRadius="30dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackgroundblue"
                    android:padding="10dp"
                    android:src="@drawable/ic_star_black_16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/material_deep_purple"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/check_balance"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/rechargeCardViewId"
            android:layout_width="0dp"
            app:cardCornerRadius="30dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackgroundblue"
                    android:padding="10dp"
                    android:src="@drawable/ic_flare_black_16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/material_deep_purple"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/recharge"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/generalTigoPesaCardView"
            android:layout_width="0dp"
            app:cardCornerRadius="30dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackgroundpurple"
                    android:padding="10dp"
                    android:src="@drawable/ic_monetization_on_black_16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/material_deep_purple"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tigo_pesa"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/generalMpesaCardView"
            android:layout_width="0dp"
            app:cardCornerRadius="30dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackgroundpurple"
                    android:padding="10dp"
                    android:src="@drawable/ic_monetization_on_black_16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/material_deep_purple"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/m_pesa"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/generalAirtelMoneyCardView"
            android:layout_width="0dp"
            app:cardCornerRadius="30dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackgroundpurple"
                    android:padding="10dp"
                    android:src="@drawable/ic_monetization_on_black_16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/material_deep_purple"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/airtel_money"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/generalHaloPesaCardView"
            android:layout_width="0dp"
            app:cardCornerRadius="30dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackgroundpurple"
                    android:padding="10dp"
                    android:src="@drawable/ic_monetization_on_black_16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/material_deep_purple"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/halopesa"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>




    </LinearLayout>

</LinearLayout>