<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@color/background_color"
android:orientation="vertical"
android:padding="10dp"
tools:context=".Airtel">

    <!--



<android.support.v7.widget.CardView
    android:id="@+id/introPhoto"
    android:layout_width="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_height="60dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="30dp"
    android:background="@color/background_color"
    android:orientation="horizontal">




    <ImageView
        android:layout_width="191dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/airtel_money_logo"
        android:src="@drawable/airtelmoney_logo" />




</android.support.v7.widget.CardView>

-->


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/checkBalanceCardView"
        android:layout_width="0dp"
        android:clickable="true"
        app:cardCornerRadius="30dp"
        android:layout_margin="5dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_frame"
                android:layout_height="@dimen/icon_frame"
                android:background="@drawable/circlebackgroundblue"
                android:padding="10dp"
                android:src="@drawable/ic_star_black_16dp"
                android:contentDescription="@string/check_balance" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/material_deep_purple"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/check_balance"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/airtelMoneyCardView"
        android:layout_width="0dp"
        android:clickable="true"
        app:cardCornerRadius="30dp"
        android:layout_margin="5dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_frame"
                android:layout_height="@dimen/icon_frame"
                android:background="@drawable/circlebackgroundpurple"
                android:padding="10dp"
                android:src="@drawable/ic_monetization_on_black_16dp"
                android:contentDescription="@string/airtel_money" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/material_deep_purple"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/airtel_money"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/airtelBundle1CardView"
        android:layout_width="0dp"
        app:cardCornerRadius="30dp"
        android:clickable="true"
        android:layout_margin="5dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_frame"
                android:layout_height="@dimen/icon_frame"
                android:background="@drawable/circlebackgroundgreen"
                android:padding="10dp"
                android:src="@drawable/ic_school_black_16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/material_deep_purple"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/uni"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/airtelBundle2CardView"
        android:layout_width="0dp"
        app:cardCornerRadius="30dp"
        android:layout_margin="5dp"
        android:clickable="true"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_frame"
                android:layout_height="@dimen/icon_frame"
                android:background="@drawable/circlebackgroundgreen"
                android:padding="10dp"
                android:src="@drawable/ic_layers_black_16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/material_deep_purple"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bundle"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>

</LinearLayout>